--- a/25/index.html
+++ b/25/index.html
@@ -5,11 +5,25 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
 	<link rel="stylesheet" href="">
+
+    <style>
+	
+
+		.primera {width: 500px; height: 500px;}
+
+		.segunda {max-width:500px; max-height: 500px;}
+
+    </style>
+
+
+</style>
+
+
 </head>
 <body>
 
-	<img src="images/logo.png" alt="logo desafio latam" >
-	<img src="images/logo.png" alt="logo desafio latam" >
+	<img src="../images/logo.png" alt="logo desafio latam" class="primera">
+	<img src="../images/logo.png" alt="logo desafio latam" class="segunda">
 
 </body>
 </html>
