--- a/02/index.html
+++ b/02/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <title></title>
-</body>
+
 <head>
 
+<title>clase 01</title>
 
 </head>
+
+<body>
+    
+</body>
+
 </html>
