--- a/03/index.html
+++ b/03/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 
+<meta charset="UTF-8">
+<title>clase 01</title>
+
 </head>
 <body>
 
-    <p > Mi nombre es Antonio Núñez López</p>
+    <p>Mi nombre es Antonio Núñez López</p>
 
 </body>
 </html>
