--- a/20/index.html
+++ b/20/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head> Go Green </head>
+    
+    <title>Go Green</title>
+    <style>
+    p{ color:#00fc00; 
+    }	
+    </style>
+    
 </head>
 <body>
     <p> Hellowww </p>
