--- a/22/index.html
+++ b/22/index.html
@@ -2,12 +2,19 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<style "color:yellow">
+	
+	<style>
+
+    p{ color:yellow; }
+    .color{ color:red; }
+
+    </style>
+
 </head>
 <body>
 	<div>
 		<p > Hellowww </p>
-		<p> Lorem ipsum dolor sit amet. </p>
+		<p class="color"> Lorem ipsum dolor sit amet. </p>
 	</div>
 </body>
 </html>
